  * Moloch >= 2.0.0 requires NodeJS 10.x
  * Moloch >= 1.6.0 requires NodeJS 8.x, 8.12 or later
  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading
NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading

4.3.2 2023/05/xx

4.3.1 2023/05/08
  - BREAKING - If running mixed versions of Arkime, broken cron queries error
               might show on OLD version
  - release - fix ubuntu22 kafka dep
  - all - passwordSecret log message now has the right [section]
  - capture - --tags option now works as well as --tag
  - viewer - new auto cronQueries setting
  - viewer - change where primary viewer info is stored to not cause constant 
             mapping change
  - viewer - fixed ipv6 not working, now assumes zero filled with mask (if 
             not provided)
  - viewer - code refactor into javascript classes

4.3.0 2023/04/27
  - BREAKING - Only SuperAdmin can assign *Admin roles now
  - release - fix kafka library linking
  - release - al2023 support
  - release - improve arkime_config_interfaces.sh
  - release - Configure doesn't offer demo Elasticsearch on Arch
  - release - reqBodyOnlyUtf8=true in sample config file
  - all - support colon in OpenSearch/Elasticsearch password
  - all - fix some prototype pollution
  - all - improve roles enforcement
  - all - New authTrustProxy setting
  - capture - tcpClosingTimeout setting controls delay before saving tcp
              sessions after close
  - capture - default dbBulkSize to 1M, min 500K, max 15M and removed 
              from sample config file
  - capture - s3 writer now writes multiple files based on packetThreads
  - capture - s3 writer supports zstd, s3Compression setting
  - capture - s3 writer compression level, s3CompressionBlockSize setting
  - capture - s3 writer block size, s3CompressionBlockSize setting