@@ -288,9 +288,11 @@ format=tagger
 VTIP=url:https://www.virustotal.com/en/ip-address/%TEXT%/information/;name:Virus Total IP;category:ip
 VTHOST=url:https://www.virustotal.com/en/domain/%HOST%/information/;name:Virus Total Host;category:host
 VTURL=url:https://www.virustotal.com/latest-scan/%URL%;name:Virus Total URL;category:url
+ALLTESTConfig=url:http:/www.example.com;name:AllConfigTest;all:true
 
 [field-actions]
 ASDF=url:https://www.asdf.com?expression=%EXPRESSION%&date=%DATE%&field=%FIELD%&dbField=%DBFIELD%;name:Field Action %FIELDNAME%!;category:ip;users:admin,test1
+ALLTEST=url:https://www.asdf.com?expression=%EXPRESSION%&date=%DATE%&field=%FIELD%&dbField=%DBFIELD%;name:All Field Action %FIELDNAME%!;all:true
 
 [custom-fields]
 iscool=kind:termfield;count:true;friendly:Is cool;db:iscool;help:Is Cool String
