@@ -2,3 +2,4 @@ VTIP=url:https://www.virustotal.com/en/ip-address/%TEXT%/information/;name:Virus
 VTHOST=url:https://www.virustotal.com/en/domain/%HOST%/information/;name:Virus Total Host;category:host
 VTURL=url:https://www.virustotal.com/latest-scan/%URL%;name:Virus Total URL;category:url
 USERTEST=url:https://example.com;name:usertest;category:url;users:test1;notUsers:test101
+ALLTESTWISE=url:http:/www.example.com;name:AllWiseTest;all:true
