@@ -29,6 +29,7 @@ NOTICE: Restart wiseService before capture when upgrading
 NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading
 
 4.3.2 2023/05/xx
+  - viewer/wise - Field/Value actions now support all:true to show on every instance
 
 4.3.1 2023/05/08
   - BREAKING - If running mixed versions of Arkime, broken cron queries error
